# Urban-Growth-Prediction

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py
backend/: city_analysis.py
config/: osm.yaml  satellite.yaml  sentinel.yaml
dashboard/: __init__.py
deep_learning/: __init__.py
explainability/: __init__.py
feature_engineering/: __init__.py
gee/: __init__.py  authenticate.py  export.py  sentinel_pipeline.py  utils.py
ml_models/: __init__.py
models/: random_forest_model.pkl  xgboost_model.pkl  xgboost_tuned_model.pkl
notebooks/: 01_sentinel_visualization.ipynb  02_osm_visualization.ipynb  03_exploratory_data_analysis.ipynb  04_baseline_models.ipynb  05_model_optimization.ipynb  06_model_explainability.ipynb  07_hybrid_deep_learning.ipynb
osm/: __init__.py  cleaner.py  downloader.py  feature_extractor.py  grid_generator.py  spatial_join.py  validator.py
reports/: shap_force_high.html  shap_force_low.html  shap_force_medium.html
results/: model_comparison.csv  model_comparison_final.csv  shap_citywise_importance.csv  shap_explainability_report.md  shap_global_importance.csv  xgboost_baseline_vs_tuned.csv
scratch/: test_resample.py  test_shap.py
scripts/: __init__.py  create_powerbi_dataset.py  download_osm.py  download_sentinel.py  generate_locality_cache.py  generate_patches.py  preprocess_data.py  run_eda.py  run_shap.py  setup_folders.py  train_baseline.py  train_hybrid.py  tune_xgboost.py
sentinel/: feature_extractor.py  growth_score.py  (+6 more)
(+25 files in other folders)
